--- a/snack-manufacturing-business/thank-you.html.html
+++ b/snack-manufacturing-business/thank-you.html.html
@@ -83,7 +83,7 @@
 </head>
 <body>
   <div class="thank-you-container">
-    <img src="./checkImg.webp" alt="">
+    <img src="./assets/checkImg.webp" alt="">
     <h1>Thank <span>You!</span></h1>
     <p>Our team will get back to you shortly.</p>
     <!-- <a href="https://africaforinvestors.com/">Return to Home</a> -->
