--- a/snack-manufacturing-business/thank-you.html
+++ b/snack-manufacturing-business/thank-you.html
@@ -28,7 +28,7 @@
     .thank-you-container {
       padding: 60px 40px;
       border-radius: 12px;      
-      max-width: 600px;
+      max-width: 800px;
       width: 100%;
     }
 
@@ -59,8 +59,7 @@
     .thank-you-container a {
       display: inline-block;
       text-decoration: none;
-      color: #fff;
-      padding: 12px 24px;
+      color: #a2c617;      
       border-radius: 6px;
       font-weight: bold;
     }
@@ -86,6 +85,7 @@
     <img src="./assets/checkImg.webp" alt="">
     <h1>Thank <span>You!</span></h1>
     <p>Our team will get back to you shortly.</p>
+    <p>In the meantime, we invite you to explore more opportunities at <a href="https://africaforinvestors.com/">AfricaForInvestors.com</a> and discover how you can invest, expand and grow across Africa’s thriving industrial zones.</p>
     <!-- <a href="https://africaforinvestors.com/">Return to Home</a> -->
   </div>
 </body>
