--- a/snack-manufacturing-business/thank-you.html
+++ b/snack-manufacturing-business/thank-you.html
@@ -74,7 +74,7 @@
       .thank-you-container h1 {
         font-size: 2rem;
       }
-      .thank-you-container p{
+      .thank-you-container p, .thank-you-container a{
         font-size: 15px;
       }
     }
