--- a/snack-manufacturing-business/index.html
+++ b/snack-manufacturing-business/index.html
@@ -23,7 +23,7 @@
             <div class="split">
                 <div class="left">
                     <p>Unlock Your Gateway to a <br>
-                        <span>$2$1 Trillion</span> Food Economy with:
+                        <span>$1 Trillion</span> Food Economy with:
                     </p>
                     <div class="tiles">
                         <div>
