--- a/snack-manufacturing-business/index.html
+++ b/snack-manufacturing-business/index.html
@@ -308,7 +308,7 @@
                         .then((data) => {
                             console.log('Server response:', data);
                             if (!data.error) {
-                                location.href = '/thank-you';  
+                                location.href = '/snack-manufacturing-business/thank-you';  
                             }
                         })
                         .catch((err) => {
