--- a/snack-manufacturing-business/index.html
+++ b/snack-manufacturing-business/index.html
@@ -309,8 +309,8 @@
                         .then((data) => {
                             console.log('Server response:', data);
                             if (!data.error) {
-                                location.href = '/thank-you';  
-                                 btn.disabled = false;
+                                location.href = '/snack-manufacturing-business/thank-you';  
+                                btn.disabled = false;
                                 btn.innerText = 'Request Consultation';
                             }
                         })
