--- a/snack-manufacturing-business/index.html
+++ b/snack-manufacturing-business/index.html
@@ -8,6 +8,25 @@
     <meta name="description" content="Invest in Africa’s booming snack manufacturing sector. Set up business in Arise IIP SEZs with incentives, modern infrastructure, and vast consumer demand.">
     <meta property="og:image" content="./assets/third_background.webp" />
     <link rel="stylesheet" href="./snacks.css">
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "rn1b99ha1v");
+</script>
+
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PJKNNBYFF4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PJKNNBYFF4');
+
+</script>
 </head>
 
 <body>
