--- a/snack-manufacturing-business/index.html
+++ b/snack-manufacturing-business/index.html
@@ -49,8 +49,8 @@
                         <label for="email">Enter your email</label>
                         <input type="email" id="email" placeholder="Email">
                         <label for="phone">Enter your phone</label>
-                        <input data-lenis-prevent type="tel" class="phone_tel" id="phone" placeholder="Phone Number" maxlength="17" minlength="7"
-                            style="padding-left: 50px;">
+                        <input data-lenis-prevent type="tel" class="phone_tel" id="phone" placeholder="Phone Number"
+                            maxlength="17" minlength="7" style="padding-left: 50px;">
                         <label for="tellUs">describe your business</label>
                         <textarea name="message" placeholder="Message" id="tellUs"></textarea>
                     </div>
@@ -197,8 +197,8 @@
         <label for="name_" hidden>Name</label>
         <input type="text" name="name" id="name_" placeholder="Name">
         <label for="number_" hidden>Phone Number</label>
-        <input type="text" data-lenis-prevent class="phone_tel" id="number_" name="number" placeholder="Phone Number" maxlength="17" minlength="7"
-            style="padding-left: 50px;">
+        <input type="text" data-lenis-prevent class="phone_tel" id="number_" name="number" placeholder="Phone Number"
+            maxlength="17" minlength="7" style="padding-left: 50px;">
         <label for="email_" hidden>enter your email</label>
         <input type="email" name="email" id="email_" placeholder="Email">
         <button class="cta form_cta" data-source="second">Request Consultation</button>
@@ -227,38 +227,38 @@
 
 
     <script>
-let lenis;
+        let lenis;
 
-// init Lenis once
-function initLenis() {
-  lenis = new Lenis();
+        // init Lenis once
+        function initLenis() {
+            lenis = new Lenis();
 
-  // keep ScrollTrigger in sync
-  lenis.on("scroll", ScrollTrigger.update);
+            // keep ScrollTrigger in sync
+            lenis.on("scroll", ScrollTrigger.update);
 
-  // drive Lenis with GSAP ticker
-  gsap.ticker.add((time) => {
-    lenis.raf(time * 1000);
-  });
-  gsap.ticker.lagSmoothing(0);
+            // drive Lenis with GSAP ticker
+            gsap.ticker.add((time) => {
+                lenis.raf(time * 1000);
+            });
+            gsap.ticker.lagSmoothing(0);
 
-  window.lenis = lenis; // keep reference global
-}
+            window.lenis = lenis; // keep reference global
+        }
 
-   function pauseLenis() {
-  if (window.lenis) {
-    window.lenis.destroy();
-    window.lenis = null;
-  }
-}
+        function pauseLenis() {
+            if (window.lenis) {
+                window.lenis.destroy();
+                window.lenis = null;
+            }
+        }
 
-// re-init helper
-function resumeLenis() {
-  if (!window.lenis) {
-    initLenis();
-  }
-}
-initLenis();
+        // re-init helper
+        function resumeLenis() {
+            if (!window.lenis) {
+                initLenis();
+            }
+        }
+        initLenis();
 
 
         document.addEventListener('DOMContentLoaded', () => {
@@ -357,7 +357,7 @@ initLenis();
                             }, 3000);
                         }
                         btn.disabled = false;
-                        // btn.innerText = 'Request Consultation';
+                        btn.innerText = 'Request Consultation';
                         return;
                     }
                     console.log(name, number, email, msg, subscribeVal, tandcVal, countryData.name, countryData.dialCode);
