--- a/snack-manufacturing-business/index.html
+++ b/snack-manufacturing-business/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="Invest in Africa’s booming snack manufacturing sector. Set up business in Arise IIP SEZs with incentives, modern infrastructure, and vast consumer demand.">
     <meta property="og:image" content="./assets/third_background.webp" />
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.13/css/intlTelInput.css">
     <link rel="stylesheet" href="./snacks.css">
     <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
