--- a/snack-manufacturing-business/index.html
+++ b/snack-manufacturing-business/index.html
@@ -208,7 +208,7 @@
         </div>
     </section>
 
-    <section id="form">
+    <section id="form" >
         <img src="./assets/close.png" alt="close" class="close">
         <img src="./assets/afi-logo.svg" alt="logo" class="logo">
         <h2>Setup Your Snack Business Today</h2>
@@ -220,7 +220,7 @@
         <label for="email_" hidden>enter your email</label>
         <input type="email" name="email" id="email_" placeholder="Email">
         <button class="cta form_cta" data-source="second">Request Consultation</button>
-        <div class="alert_second" style="position: absolute; bottom: 15px; right: 5vw; font-size: 14px; color: red;">
+        <div class="alert_second" >
         </div>
     </section>
 
@@ -372,7 +372,7 @@
                             document.querySelector('.alert_second').innerText = 'Please fill all the fields';
                             setTimeout(() => {
                                 document.querySelector('.alert_second').innerText = '';
-                            }, 3000);
+                            }, 300000);
                         }
                         btn.disabled = false;
                         btn.innerText = 'Request Consultation';
