--- a/snack-manufacturing-business/index.html
+++ b/snack-manufacturing-business/index.html
@@ -8,27 +8,29 @@
     <meta name="description"
         content="Invest in Africa’s booming snack manufacturing sector. Set up business in Arise IIP SEZs with incentives, modern infrastructure, and vast consumer demand.">
     <meta property="og:image" content="./assets/third_background.webp" />
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.13/css/intlTelInput.css">
+    <link rel="icon" href="https://africaforinvestors.com/static/front/assets/favicon_arise.png" type="image/x-icon/png">
+    <link rel="shortcut icon" href="https://africaforinvestors.com/static/front/assets/favicon_arise.png" type="image/x-icon/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.13/css/intlTelInput.css">
     <link rel="stylesheet" href="./snacks.css">
     <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "rn1b99ha1v");
-</script>
+        (function (c, l, a, r, i, t, y) {
+            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+        })(window, document, "clarity", "script", "rn1b99ha1v");
+    </script>
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PJKNNBYFF4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PJKNNBYFF4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-PJKNNBYFF4');
+        gtag('config', 'G-PJKNNBYFF4');
 
-</script>
+    </script>
 </head>
 
 <body>
@@ -208,7 +210,7 @@
         </div>
     </section>
 
-    <section id="form" >
+    <section id="form">
         <img src="./assets/close.png" alt="close" class="close">
         <img src="./assets/afi-logo.svg" alt="logo" class="logo">
         <h2>Setup Your Snack Business Today</h2>
@@ -220,7 +222,7 @@
         <label for="email_" hidden>enter your email</label>
         <input type="email" name="email" id="email_" placeholder="Email">
         <button class="cta form_cta" data-source="second">Request Consultation</button>
-        <div class="alert_second" >
+        <div class="alert_second">
         </div>
     </section>
 
@@ -421,7 +423,7 @@
                             if (!data.error) {
                                 btn.disabled = false;
                                 btn.innerText = 'Request Consultation';
-                                location.href = '/snack-manufacturing-business/thank-you';  
+                                location.href = '/snack-manufacturing-business/thank-you';
                             }
                         })
                         .catch((err) => {
