--- a/snack-manufacturing-business/thank-you.html
+++ b/snack-manufacturing-business/thank-you.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Thank You - Africa for Investors</title>
+   <link rel="icon" href="https://africaforinvestors.com/static/front/assets/favicon_arise.png" type="image/x-icon/png">
+    <link rel="shortcut icon" href="https://africaforinvestors.com/static/front/assets/favicon_arise.png" type="image/x-icon/png">
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
