--- a/snack-manufacturing-business/thank-you.html
+++ b/snack-manufacturing-business/thank-you.html
@@ -100,7 +100,12 @@
 
   gtag('config', 'G-PJKNNBYFF4');
 
-</script>
+
+ gtag('event', 'conversion', {
+  'send_to': 'AW-361133675/3Rl6CP-jgtwaEOvsmawB'
+ });
+       
+    </script>
 
 </head>
 <body>
