--- a/snack-manufacturing-business/index.html
+++ b/snack-manufacturing-business/index.html
@@ -421,8 +421,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     formData.append('city', '');
                     formData.append('loc', '');
                     formData.append('postal', '');
-                    formData.append('opportunity', '');
-                    formData.append('sector', '');
+                    formData.append('opportunity_id', '');
+                    formData.append('sector_id', '');
                     formData.append('subscribe', subscribeVal);
                     formData.append('accept_tnc', tandcVal);
                     formData.append('country_name', countryData.name);
