--- a/africa-calling-textile-manufactures/index.html
+++ b/africa-calling-textile-manufactures/index.html
@@ -12,16 +12,7 @@
     <link rel="shortcut icon" href="https://africaforinvestors.com/static/front/assets/favicon_arise.png" type="image/x-icon/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.13/css/intlTelInput.css">
     <link rel="stylesheet" href="./snacks.css">
-    <script type="text/javascript">
-        (function (c, l, a, r, i, t, y) {
-            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
-            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
-            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-        })(window, document, "clarity", "script", "rn1b99ha1v");
-    </script>
-
-
-
+    
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PJKNNBYFF4"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -51,15 +42,15 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 <body>
     <section id="home">
 
-        <img src="./assets/homeBanner.webp" alt="homepage" class="backLayer">
+        <img src="./assets/textile_banner.jpg" alt="homepage" class="backLayer">
         <div class="layer"></div>
         <div class="content">
             <img src="./assets/afi-logo.svg" alt="logo" class="logo">
-            <h1>Invest in Africa’s <br><span>Booming Snack Market</span> </h1>
+            <h1>AFRICA CALLING <br><span>TEXTILE MANUFACTURERS</span> </h1>
             <div class="split">
                 <div class="left">
                     <p>Unlock Your Gateway to a <br>
-                        <span>$1 Trillion</span> Food Economy with:
+                        <span>$1.11 Trillion</span> Economy with:
                     </p>
                     <div class="tiles">
                         <div>
@@ -77,7 +68,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </div>
                 </div>
                 <div class="form">
-                    <h2>Setup Your Snack Business Today</h2>
+                    <h2>Setup Your Textile Business Today</h2>
                     <div class="field">
                         <label for="name">Enter you name</label>
                         <input type="text" id="name" placeholder="Name">
@@ -114,31 +105,34 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="left">
             <h2>Africa's Edge in
                 Manufacturing</h2>
-            <p>With a rising market volume, expanding consumer base, availability of skilled workforce and ease of
-                business incentives - Africa's snack food industry is not just growing, it's evolving!</p>
+            <p>With a rapidly expanding global market, growing demand from international brands, access to raw materials, and competitive production economics, Africa’s textiles and apparel sector is moving into a new phase of manufacturing maturity!</p>
         </div>
         <div class="right">
             <div class="chips">
                 <img src="./assets/arrow.svg" alt="arrow" class="arrow">
-                <img src="./assets/1.webp" alt="chips" class="chipsImage imgg1">
-                <img src="./assets/4.webp" alt="chips" class="chipsImage imgg2">
-                <img src="./assets/2.webp" alt="chips" class="chipsImage imgg3">
-                <img src="./assets/3.webp" alt="chips" class="chipsImage imgg4">
-                <img src="./assets/5.webp" alt="chips" class="chipsImage imgg5">
+                <img src="./assets/cotton1.webp" alt="chips" class="chipsImage imgg1">
+                <img src="./assets/cotton2.webp" alt="chips" class="chipsImage imgg2">
+                <img src="./assets/cotton3.webp" alt="chips" class="chipsImage imgg3">
+                <img src="./assets/cotton4.webp" alt="chips" class="chipsImage imgg4">
+                <img src="./assets/cotton5.webp" alt="chips" class="chipsImage imgg5">
+                <img src="./assets/cotton6.webp" alt="chips" class="chipsImage imgg6">
+                <img src="./assets/cotton7.webp" alt="chips" class="chipsImage imgg7">
+                <img src="./assets/cotton8.webp" alt="chips" class="chipsImage imgg8">
+                <img src="./assets/cotton9.webp" alt="chips" class="chipsImage imgg9">
             </div>
             <div class='projected'>
-                <p>Projected market volume</p>
-                <h3>$ 89.42 Mn</h3>
-                <p>By 2029</p>
+                <p>Projected market Size</p>
+                <h3>$ 1.61 Tn</h3>
+                <p>2033 Forecast</p>
             </div>
             <div class="leftpop pop">
                 <p class="pop1">
-                    1.3Bn <br>Consumers
+                    Vertical <br> Integration
                 </p>
             </div>
             <div class="leftpop pop">
                 <p class="pop2">
-                    ~40% Lower <br>Operational Costs
+                    Industrial-Grade  <br> Infrastructure
                 </p>
             </div>
             <div class="rightpop pop">
@@ -148,8 +142,43 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </div>
             <div class="rightpop pop">
                 <p class="pop4">
-                    Tax Incentives & <br>Fast-Track Setup
+                    Duty-Free <br> Export Access
                 </p>
+            </div>
+        </div>
+    </section>
+
+    <section id="new_added">
+        <img src="./assets/textile_back.webp" alt="textile background">
+        <div class="content">
+            <h3>Opportunities Across the <br> <span>Textiles Value Chain</span> </h3>
+            <p>Multiple Entry Points. One Integrated Ecosystem. </p>
+            <div>
+                <div>
+                    <p>Spinning</p>
+                    <img src="./assets/sppining.png" alt="spinning">
+                </div>
+                <div>
+                    <p>Textile <br> Recycling </p>
+                    <img src="./assets/recycle_icon.png" alt="spinning">
+                </div>
+                <div>
+                    <p>Weaving</p>
+                    <img src="./assets/weaving_icon.png" alt="spinning">
+                </div>
+                <div>
+                    <p>Garmenting <br> Accessories </p>
+                    <img src="./assets/garmenting_icon.png" alt="Stitching Machine">
+                </div>
+                <div>
+                    <p>Knitting</p>
+                    <img src="./assets/knitting.png" alt="Knitting">
+                </div>
+                <div>
+                    <p>Processing<br>
+                        Dyeing </p>
+                    <img src="./assets/dyeing.png" alt="Dyeing">
+                </div>
             </div>
         </div>
     </section>
@@ -197,6 +226,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <img src="./assets/equitane.png" alt="logo1">
                 <img src="./assets/africa2.png" alt="logo 2">
                 <img src="./assets/afrex.png" alt="logo 3">
+                <img src="./assets/vision.png" alt="logo 4">
             </div>
         </div>
         <div class="partners">
@@ -217,7 +247,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <p>Our Presence across</p>
                 <div>India | China | Vietnam | UAE | GABON | TOGO | BENIN | COTE D'IVOIRE | NIGERIA | CONGO | REPUBLIC
                     OF
-                    CONGO | RWANDA | TANZANIA | KENYA | MALAWI</div>
+                    CONGO | RWANDA | TANZANIA | KENYA | MALAWI | CHAD | Sierra Leone </div>
             </div>
         </div>
         <div class="copy">
@@ -228,7 +258,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <section id="form">
         <img src="./assets/close.png" alt="close" class="close">
         <img src="./assets/afi-logo.svg" alt="logo" class="logo">
-        <h2>Setup Your Snack Business Today</h2>
+        <h2>Setup Your Textile Business Today</h2>
         <label for="name_" hidden>Name</label>
         <input type="text" name="name" id="name_" placeholder="Name">
         <label for="number_" hidden>Phone Number</label>
@@ -403,7 +433,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     formData.append('mobile', number);
                     formData.append('email', email);
                     formData.append('any_comments', msg);
-                    formData.append('page_url', 'https://africaforinvestors.com/snack-manufacturing-business/');
+                    formData.append('page_url', 'https://africaforinvestors.com/africa-calling-textile-manufactures/');
 
                     // hidden fields
                     // formData.append('country_name', 'India');
@@ -439,7 +469,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             if (!data.error) {
                                 btn.disabled = false;
                                 btn.innerText = 'Request Consultation';
-                                location.href = '/snack-manufacturing-business/thank-you';
+                                location.href = '/africa-calling-textile-manufactures/thank-you';
                             }
                         })
                         .catch((err) => {
